--- a/cutler/model_zoo/configs/CutLER-ImageNet/cascade_mask_rcnn_R_50_FPN_self_train.yaml
+++ b/cutler/model_zoo/configs/CutLER-ImageNet/cascade_mask_rcnn_R_50_FPN_self_train.yaml
@@ -56,5 +56,5 @@ TEST:
     ENABLED: True
     NUM_ITER: 200
   DETECTIONS_PER_IMAGE: 100
-OUTPUT_DIR: "/home/xudongw/home/CutLER-Github/CutLER/cutler/test/self-train-r1/" # round 1
+OUTPUT_DIR: "output/self-train-r1/" # round 1
 # OUTPUT_DIR: "output/self-train-r2/" # round 2
